Fixes minor layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-    font-family: 'Roboto', 'sans serif';
+    font-family: 'Open Sans', 'Helvetica', 'sans serif';
 }
 
 .nav-pills {
