--- a/static/css/staff.css
+++ b/static/css/staff.css
@@ -26,7 +26,3 @@
         margin-top: 5px;
     }
 }
-
-@media(min-width:768px){}
-@media(min-width:992px){}
-@media(min-width:1200px){}
